force-app/main/default/objects/B25__FieldAssignment__c/B25__FieldAssignment__c.object-meta.xml
<CustomObject>
    <description>Allows copying of fields on Opportunities to Reservations.</description>
    <label>Field Assignment</label>
    <nameField>
        <displayFormat>FA-{000000000}</displayFormat>
        <label>Field Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>