force-app/main/default/objects/B25__FieldAssignment__c/fields/B25__AutomatedBookingRule__c.field-meta.xml
<CustomField>
    <fullName>B25__AutomatedBookingRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The ABR record for which the Field Assignment record applies.</description>
    <inlineHelpText>L’ABR pour laquelle cette assignation de champ s’applique.</inlineHelpText>
    <label>Automated Booking Rule</label>
    <referenceTo>B25__AutomatedBookingRule__c</referenceTo>
    <relationshipLabel>Field Assignments</relationshipLabel>
    <relationshipName>FieldAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>