force-app/main/default/objects/B25__FieldAssignment__c/fields/B25__SourceField__c.field-meta.xml
<CustomField>
    <fullName>B25__SourceField__c</fullName>
    <description>The field from which a copy will be made.</description>
    <inlineHelpText>Le champ à partir duquel une copie sera effectuée.</inlineHelpText>
    <label>Source Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>