force-app/main/default/objects/B25__FieldAssignment__c/fields/B25__TargetField__c.field-meta.xml
<CustomField>
    <fullName>B25__TargetField__c</fullName>
    <description>The field to which the value of the Source Field will be copied in to.</description>
    <inlineHelpText>Le champ vers lequel la valeur du champ source sera copiée.</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>